--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -25,10 +25,9 @@
         <activity android:name=".CadastroActivity"/>
         <activity android:name=".MainActivityListAluno"/>
         <activity android:name=".MainHome"/>
-        <activity android:name=".MainListar"/>
-        <activity android:name=".MainCadastrar"/>
         <activity android:name=".MainCadastroAluno"/>
         <activity android:name=".MainActivityListDisciplina"/>
+        <activity android:name=".MainCadastroDisciplina"/>
     </application>
 
 </manifest>
